--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -69,6 +69,11 @@ const isActive = (path: string) => {
           ]}
         >
           <li class="col-span-2">
+            <a href="/books" class:list={{ "active-nav": isActive("/books") }}>
+              Books
+            </a>
+          </li>
+          <li class="col-span-2">
             <a href="/posts" class:list={{ "active-nav": isActive("/posts") }}>
               Posts
             </a>
