Added alt text to images

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,7 +28,7 @@ const pageDescription =
       <div class="my-8 flex justify-center">
         <img
           src="/images/cache-mcclure-author.svg"
-          alt="Cache McClure"
+          alt="Cache McClure, science fiction author"
           class="h-48 w-48 rounded-full border-2 border-accent sm:h-64 sm:w-64"
         />
       </div>
