--- a/src/components/EditPost.astro
+++ b/src/components/EditPost.astro
@@ -22,6 +22,7 @@ const showEditPost =
       href={href}
       target="_blank"
       rel="noopener noreferrer"
+      aria-label={`Edit this post on GitHub`}
       class:list={[
         "flex justify-baseline gap-1.5 opacity-80 hover:text-accent",
         className,
