--- a/src/components/BackToTopButton.astro
+++ b/src/components/BackToTopButton.astro
@@ -13,6 +13,7 @@ import IconArrowNarrowUp from "@/assets/icons/IconArrowNarrowUp.svg";
 >
   <button
     data-button="back-to-top"
+    aria-label="Back to top"
     class:list={[
       "group relative bg-background px-2 py-1",
       "size-14 rounded-full shadow-xl",
