--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -47,6 +47,7 @@ const isActive = (path: string) => {
       </a>
       <nav
         id="nav-menu"
+        aria-label="Main navigation"
         class="flex w-full flex-col items-center sm:ms-2 sm:flex-row sm:justify-end sm:space-x-4 sm:py-0"
       >
         <button
@@ -129,7 +130,7 @@ const isActive = (path: string) => {
                   id="theme-btn"
                   class="focus-outline relative size-12 p-4 sm:size-8 hover:[&>svg]:stroke-accent"
                   title="Toggles light & dark"
-                  aria-label="auto"
+                  aria-label="Toggle light and dark mode"
                   aria-live="polite"
                 >
                   <IconMoon class="absolute top-[50%] left-[50%] -translate-[50%] scale-100 rotate-0 transition-all dark:scale-0 dark:-rotate-90" />
