--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -75,13 +75,8 @@ const isActive = (path: string) => {
             </a>
           </li>
           <li class="col-span-2">
-            <a href="/posts" class:list={{ "active-nav": isActive("/posts") }}>
-              Posts
-            </a>
-          </li>
-          <li class="col-span-2">
-            <a href="/tags" class:list={{ "active-nav": isActive("/tags") }}>
-              Tags
+            <a href="/news" class:list={{ "active-nav": isActive("/news") }}>
+              News
             </a>
           </li>
           <li class="col-span-2">
