--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import Hr from "./Hr.astro";
 import Socials from "./Socials.astro";
+import { SITE } from "@/config";
 
 const currentYear = new Date().getFullYear();
 
@@ -13,12 +14,24 @@ const { noMarginTop = false } = Astro.props;
 
 <footer class:list={["w-full", { "mt-auto": !noMarginTop }]}>
   <Hr noPadding />
+
+  <!-- Newsletter Signup Placeholder (v1.1 feature) -->
+  <div class="mx-auto max-w-3xl px-4 py-8 text-center sm:py-6">
+    <h3 class="mb-2 text-lg font-semibold">Stay Updated</h3>
+    <p class="mb-4 text-sm opacity-75">
+      Newsletter coming soon! Follow me on social media for the latest updates.
+    </p>
+    <!-- Newsletter form will be added in v1.1 -->
+  </div>
+
+  <Hr noPadding />
+
   <div
     class="flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4"
   >
     <Socials centered />
     <div class="my-2 flex flex-col items-center whitespace-nowrap sm:flex-row">
-      <span>Copyright &#169; {currentYear}</span>
+      <span>Copyright &#169; {currentYear} {SITE.author}</span>
       <span class="hidden sm:inline">&nbsp;|&nbsp;</span>
       <span>All rights reserved.</span>
     </div>
