--- a/src/components/BackToTopButton.astro
+++ b/src/components/BackToTopButton.astro
@@ -23,11 +23,12 @@ import IconArrowNarrowUp from "@/assets/icons/IconArrowNarrowUp.svg";
   >
     <span
       id="progress-indicator"
+      aria-hidden="true"
       class="absolute inset-0 -z-10 block size-14 scale-110 rounded-full bg-transparent md:hidden md:h-8 md:rounded-md"
     ></span>
-    <IconChevronLeft class="inline-block rotate-90 md:hidden" />
+    <IconChevronLeft aria-hidden="true" class="inline-block rotate-90 md:hidden" />
     <span class="sr-only text-sm group-hover:text-accent md:not-sr-only">
-      <IconArrowNarrowUp class="inline-block size-4" />
+      <IconArrowNarrowUp aria-hidden="true" class="inline-block size-4" />
       Back To Top
     </span>
   </button>
