--- a/src/components/Datetime.astro
+++ b/src/components/Datetime.astro
@@ -36,6 +36,7 @@ const date = datetime.format("D MMM, YYYY"); // e.g., '22 Mar, 2025'
 
 <div class:list={["flex items-center gap-x-2 opacity-80", className]}>
   <IconCalendar
+    aria-hidden="true"
     class:list={[
       "inline-block size-6 min-w-[1.375rem]",
       { "scale-90": size === "sm" },
