--- a/src/components/EditPost.astro
+++ b/src/components/EditPost.astro
@@ -28,7 +28,7 @@ const showEditPost =
         className,
       ]}
     >
-      <IconEdit class="inline-block" />
+      <IconEdit aria-hidden="true" class="inline-block" />
       <span>{SITE.editPost.text}</span>
     </a>
   )
