--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -18,7 +18,7 @@ const { centered = false } = Astro.props;
         ariaLabel={social.linkTitle}
         title={social.linkTitle}
       >
-        <social.icon class="inline-block size-6 scale-125 fill-transparent stroke-current stroke-2 opacity-90 group-hover:fill-transparent sm:scale-110" />
+        <social.icon aria-hidden="true" class="inline-block size-6 scale-125 fill-transparent stroke-current stroke-2 opacity-90 group-hover:fill-transparent sm:scale-110" />
         <span class="sr-only">{social.linkTitle}</span>
       </LinkButton>
     ))
