--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -25,6 +25,7 @@ const { tag, tagName, size = "sm" } = Astro.props;
     ]}
   >
     <IconHash
+      aria-hidden="true"
       class:list={[
         "inline-block opacity-80",
         { "-me-3.5 size-4": size === "sm" },
