--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,7 @@ import IconSearch from "@/assets/icons/IconSearch.svg";
 import IconArchive from "@/assets/icons/IconArchive.svg";
 import IconSunHigh from "@/assets/icons/IconSunHigh.svg";
 import IconMenuDeep from "@/assets/icons/IconMenuDeep.svg";
+import IconRss from "@/assets/icons/IconRss.svg";
 import LinkButton from "./LinkButton.astro";
 import { SITE } from "@/config";
 
@@ -135,6 +136,17 @@ const isActive = (path: string) => {
               </li>
             )
           }
+          <li class="col-span-1 flex items-center justify-center">
+            <LinkButton
+              href="/rss.xml"
+              class="focus-outline flex p-3 sm:p-1"
+              ariaLabel="RSS Feed"
+              title="RSS Feed"
+            >
+              <IconRss />
+              <span class="sr-only">RSS Feed</span>
+            </LinkButton>
+          </li>
           {
             SITE.lightAndDarkMode && (
               <li class="col-span-1 flex items-center justify-center">
